--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -127,6 +127,13 @@
   url={https://dl.acm.org/doi/10.1145/1183401.1183420}
 }
 
+@misc{crauser1998parallelizing,
+  author = {Crauser, A. and Mehlhorn, K. and Meyer, U. and Sanders, P.},
+  title  = {Parallelizing Dijkstra's shortest path algorithm},
+  year   = {1998},
+  url    = {https://link.springer.com/chapter/10.1007/3-540-68530-8_14},
+  note   = {[ogled 12.~1.~2024]}
+}
 
 
 
