posodobitve literatura.bib datoteke

--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -67,12 +67,12 @@
   abstract={Based on fundamental thermodynamics, traditional electronic computers, which operate serially, require more energy per computation the faster they operate. Here, the authors show that the energy cost per operation of a parallel computer can be kept very small.}
 }
 
-@misc{parallelisation_advantages_stack_discussion_2023,
-    title = {What is it about functional programming that makes it inherently adapted to parallel execution?},
-    author = {Various Authors},
-    year = {2023},
-    url = {https://softwareengineering.stackexchange.com/questions/293851/what-is-it-about-functional-programming-that-makes-it-inherently-adapted-to-para},
-    note = {[Ogled: 27.~7.~2023]}
+@article{linke_fundamental_2015,
+  title={How functional programming mattered},
+  author={Hu Z. and Hughes J. and W. Meng},
+  journal={National Science Review},
+  url={https://academic.oup.com/nsr/article/2/3/349/1427872},
+  year={2015},
 }
 
 @book{okasaki1996,
@@ -107,24 +107,23 @@
   organization={American Federation of Information Processing Societies}
 }
 
-@article{burns1995analyzing,
+@article{kuroiwa2020analyzing,
   title={Analyzing and avoiding pathological behavior in parallel best-first search},
-  author={Burns, E. Bradley and Hatem, Matthew and Leighton, Michael R. and Ruml, Wheeler},
-  journal={Proceedings of the Fourteenth National Conference on Artificial Intelligence and Ninth Conference on Innovative Applications of Artificial Intelligence},
+  author={Kuroiwa, R. and Fukunaga, A},
+  journal={Proceedings of the Thirtieth International Conference on Automated Planning and Scheduling},
   pages={203--210},
   year={1995},
   publisher={AAAI Press},
-  url={https://ojs.aaai.org/index.php/AAAI/article/view/11954}
+  url={https://ojs.aaai.org/index.php/ICAPS/article/view/6659}
 }
 
-@article{aggarwal2006breadth,
-  title={Breadth-first search with a multi-core computer},
-  author={Aggarwal, Gagan and Sun, X.},
-  journal={Proceedings of the 22nd annual international conference on Supercomputing},
-  pages={137--146},
-  year={2006},
-  publisher={Association for Computing Machinery},
-  url={https://dl.acm.org/doi/10.1145/1183401.1183420}
+@article{rudolf2019breadth,
+  title={Level-Synchronous Parallel Breadth-First Search Algorithms For Multicore and Multiprocessor Systems},
+  author={Berrendorf R. and Makulla M.},
+  journal={The Sixth International Conference on Future Computational Technologies and Applications},
+  pages={26-31},
+  year={2019},
+  url={https://web.archive.org/web/20190329160129/https://pdfs.semanticscholar.org/cde0/420a117f8643d066cdcd60c95d5ca39a1082.pdf}
 }
 
 @misc{crauser1998parallelizing,
@@ -135,7 +134,13 @@
   note   = {[ogled 12.~1.~2024]}
 }
 
-
+@misc{parallel_floyd_warshall,
+  author = {Miller, R.},
+  title  = {Parallel Implementation of Floyd-Warshall Algorithm},
+  year   = {2019},
+  url    = {https://cse.buffalo.edu/faculty/miller/Courses/CSE633/Asmita-Gautam-Spring-2019.pdf},
+  note   = {[ogled 21.~1.~2024]}
+}
 
 
 
