dodane kljucne besede

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -51,10 +51,10 @@ The results indicate promising possibilities for parallelization in functional l
 \klasifikacija{68R10, 68W10, 68N18, 68N19, 05C85}
 
 % - ključne besede, ki nastopajo v delu, ločene s \sep
-\kljucnebesede{TODO}
+\kljucnebesede{paralelizacija\sep grafovski algoritmi\sep funkcijski programski jeziki\sep OCaml\sep iskanje v širino (BFS)\sep Dijkstrov algoritem\sep Floyd-Warshallov algoritem\sep Domainslib\sep nespremenljive podatkovne strukture\sep večjedrno računanje\sep optimizacija algoritmov\sep dinamično programiranje\sep vrsta s prednostjo\sep računska učinkovitost\sep višjenivojske abstrakcije}
 
 % - angleški prevod ključnih besed
-\keywords{TODO} % angleški prevod ključnih besed
+\keywords{parallelisation\sep graph algorithms\sep functional programming languages\sep OCaml\sep breadth-first search (BFS)\sep Dijkstra's algorithm\sep Floyd-Warshall algorithm\sep Domainslib\sep immutable data structures\sep multi-core computing\sep algorithm optimization\sep dynamic programming\sep priority queue\sep computational efficiency\sep high-level abstractions}
 
 % - angleško-slovenski slovar strokovnih izrazov
 \slovar{
