dodan anglesko-slovenski slovar izrazov

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -58,22 +58,21 @@ The results indicate promising possibilities for parallelization in functional l
 
 % - angleško-slovenski slovar strokovnih izrazov
 \slovar{
-\geslo{TODO}{TODO}
-% \geslo{high performance computing}{Visokozmožnostno računanje}
-% \geslo{domains}{domene}
-% \geslo{parallel tasks}{vzporedne naloge}
-% \geslo{task collections}{zbirke opravil}
-% \geslo{parallel computation patterns}{vzorci vzporednega računanja}
-% \geslo{synchronization primitives}{sinhronizacijski mehanizmi}
-% \geslo{load balancing}{Izravnavanje obremenitve}
-% \geslo{high-level}{visokonivojski}
-% \geslo{code wrapper}{programski ovoj}
-% \geslo{adjaceny list}{seznam sosednosti}
-% \geslo{shared memory}{skupni pomnilnik}
-% \geslo{distributed memory}{porazdeljeni pomnilnik}
-% \geslo{thread race}{dirka podatkov} % TODO: Je to dober prevod?
-% \geslo{vzajemna izključitev}{mutex}
-% \geslo{overhead}{dodatna računska obremenitev}
+  \geslo{paralelizacija}{parallelization}
+  \geslo{grafovski algoritmi}{graph algorithms}
+  \geslo{funkcijski programski jeziki}{functional programming languages}
+  \geslo{OCaml}{OCaml}
+  \geslo{iskanje v širino (BFS)}{breadth-first search (BFS)}
+  \geslo{Dijkstrov algoritem}{Dijkstra's algorithm}
+  \geslo{Floyd-Warshallov algoritem}{Floyd-Warshall algorithm}
+  \geslo{Domainslib}{Domainslib}
+  \geslo{nespremenljive podatkovne strukture}{immutable data structures}
+  \geslo{večjedrno računanje}{multi-core computing}
+  \geslo{optimizacija algoritmov}{algorithm optimization}
+  \geslo{dinamično programiranje}{dynamic programming}
+  \geslo{vrsta s prednostjo}{priority queue}
+  \geslo{računska učinkovitost}{computational efficiency}
+  \geslo{visokonivojske abstrakcije}{high-level abstractions}
 }
 
 % - ime datoteke z viri (vključno s končnico .bib), če uporabljate BibTeX
