posodabljanje referenc na diplomi

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -244,7 +244,7 @@ optimalnem razporejanju nalog in upravljanju virov za maksimalno izkoristek para
 Zakaj koncepta funkcijskih programskih jezikov ter paralelizacije tako dobro sovpadata skupaj?
 V primerjavi z drugimi vrstami programskih jezikov, kot so na primer imperativni programski jeziki,
 so funkcijski programski jeziki bolj primerni za paralelizacijo iz več razlogov 
-\cite{parallelisation_advantages_stack_discussion_2023, functional_parallel_graph_rewriting}:
+\cite{linke_fundamental_2015, functional_parallel_graph_rewriting}:
 
 \begin{itemize} \label{itemize:prednosti_funkcijskega_programiranja}
   \item \textbf{Nespremenljivost in odsotnost stranskih učinkov:} 
@@ -755,9 +755,9 @@ možnimi povezavami, imenovano faktor minimizacije. Podobni rezultati so bili op
 \end{figure}
 
 Ti rezultati kažejo, da paralelna implementacija BFS algoritma v nekaterih scenarijih ne prinaša pričakovanih izboljšav v času izračuna.
-Podobne ugotovitve so zabeležene tudi v drugih študijah. Na primer, v delu \cite{burns1995analyzing} avtorji ugotavljajo,
+Podobne ugotovitve so zabeležene tudi v drugih študijah. Na primer, v delu \cite{kuroiwa2020analyzing} avtorji ugotavljajo,
 da se pri paralelni implementaciji algoritma lahko pojavijo težave, kot je neenakomerna obremenitev procesorjev, kar
-lahko vpliva na celotno učinkovitost. Podobno v študiji \cite{aggarwal2006breadth} avtorji opozarjajo na izzive, povezane
+lahko vpliva na celotno učinkovitost. Podobno v študiji \cite{rudolf2019breadth} avtorji opozarjajo na izzive, povezane
 s sinhronizacijo in obremenitvijo v paralelnih izvedbah BFS algoritma na večjedrni računalniški arhitekturi.
 Ta spoznanja odpirajo potrebo po nadaljnjih raziskavah in optimizaciji, s ciljem izboljšati učinkovitost paralelnih implementacij,
 zlasti v primeru posebnih vrst grafov, kjer bi bili paralelni algoritmi lahko hitrejši od sekvenčnih.
