popravi citat v literatura.bib

--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -99,7 +99,7 @@
   note         = {[ogled 26.~12.~2023]}
 }
 
-@article{amdahl1967validity,
+@article{amdahl1967,
   title={Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
   author={Amdahl, Gene},
   journal={Proceedings of the AFIPS Spring Joint Computer Conference},
